# graphical-toolkit

./: .gitignore  CMakeLists.txt  Readme.md
src/: application.cpp  application.hpp  button.cpp  button.hpp  eventDispatcher.cpp  eventDispatcher.hpp  label.cpp  label.hpp  main.cpp  widget.cpp  widget.hpp
src/EventHandlers/: BaseEventHandler.cpp  BaseEventHandler.hpp  CMakeLists.txt  EventHandler.cpp  EventHandler.hpp  InputEventHandler.cpp  InputEventHandler.hpp  LabelEventHandler.cpp  LabelEventHandler.hpp
src/Events/: ButtonDownEvent.hpp  CMakeLists.txt  Event.hpp  KeyDownEvent.cpp  KeyDownEvent.hpp
src/Input/: Input.cpp  Input.hpp
